--- a/index.html
+++ b/index.html
@@ -1,113 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção de OP</title>
+    <title>Controle de Produção</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .input-group {
-            margin-bottom: 10px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="number"],
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 20px;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-right: 5px;
-        }
-        .machine-btn {
-            width: 232px;
-            height: 72px;
+        form {
             margin-bottom: 20px;
-            font-size: 20px;
-        }
-        #btn-cl01 { background-color: #FF5733; }
-        #btn-cl02 { background-color: #33C1FF; }
-        #btn-cl03 { background-color: #33FF57; }
-        #btn-cl04 { background-color: #FFC300; }
-        .calc-btn {
-            background-color: #4CAF50;
-        }
-        .calc-btn:hover {
-            background-color: #45a049;
-        }
-        .result {
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        table {
-            margin-top: 20px;
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
         }
     </style>
 </head>
 <body>
-    <h2>Controle de Produção de OP</h2>
+    <h1>Controle de Produção</h1>
 
-    <div>
-        <button id="btn-cl01" class="machine-btn" onclick="enableInputs('CL-01')">CL-01</button>
-        <button id="btn-cl02" class="machine-btn" onclick="enableInputs('CL-02')">CL-02</button>
-        <button id="btn-cl03" class="machine-btn" onclick="enableInputs('CL-03')">CL-03</button>
-        <button id="btn-cl04" class="machine-btn" onclick="enableInputs('CL-04')">CL-04</button>
-    </div>
+    <form id="productionForm">
+        <label for="machine">Nome da Máquina:</label>
+        <input type="text" id="machine" required><br>
 
-    <div class="input-group">
         <label for="opNumber">Número da OP:</label>
-        <input type="text" id="opNumber" maxlength="13" disabled oninput="formatOPNumber(this)">
-    </div>
-    <div class="input-group">
-        <label for="componentCode">Código do Componente:</label>
-        <input type="number" id="componentCode" min="0" disabled>
-    </div>
-    <div class="input-group">
-        <label for="opQuantity">Quantidade da OP:</label>
-        <input type="number" id="opQuantity" min="0" disabled>
-    </div>
-    <div class="input-group">
-        <label for="opLength">Comprimento da OP:</label>
-        <input type="number" id="opLength" min="0" disabled>
-    </div>
-    <div class="input-group">
-        <label for="fabricType">Tipo de Tecido:</label>
-        <input type="text" id="fabricType" disabled>
-    </div>
-    <div class="input-group">
-        <label for="opWeight">Gramatura da OP:</label>
-        <input type="number" id="opWeight" min="0" disabled>
-    </div>
-    <div class="input-group">
-        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
-        <input type="number" id="piecesRemoved" min="0" disabled>
-    </div>
-    <button class="calc-btn" onclick="calculateAndSave()" disabled id="calculate-btn">Calcular</button>
-    
-    <div class="result" id="result"></div>
+        <input type="text" id="opNumber" required><br>
 
-    <table id="recordsTable">
+        <label for="componentCode">Código do Componente:</label>
+        <input type="text" id="componentCode" required><br>
+
+        <label for="opQuantity">Quantidade da OP:</label>
+        <input type="number" id="opQuantity" required><br>
+
+        <label for="opLength">Comprimento da OP (m):</label>
+        <input type="number" id="opLength" required><br>
+
+        <label for="fabricType">Tipo de Tecido:</label>
+        <select id="fabricType" required>
+            <option value="">Selecione</option>
+            <option value="Plano">Plano</option>
+            <option value="Tubular">Tubular</option>
+            <option value="PET">PET</option>
+        </select><br>
+
+        <label for="opWeight">Gramatura da OP (g/m²):</label>
+        <input type="number" id="opWeight" required><br>
+
+        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+        <input type="number" id="piecesRemoved" required><br>
+
+        <button type="button" onclick="addRecord()">Adicionar Registro</button>
+        <button type="button" onclick="calculateResults()">Calcular Resultados</button>
+    </form>
+
+    <h2>Resultados:</h2>
+    <p id="cutsResult">Número de Cortes: </p>
+    <p id="turnsResult">Número de Voltas: </p>
+    <p id="cutAmountResult">Quantidade Cortada: </p>
+
+    <h2>Registros de Produção</h2>
+    <table border="1">
         <thead>
             <tr>
                 <th>Data e Hora</th>
@@ -115,111 +61,61 @@
                 <th>Número da OP</th>
                 <th>Código do Componente</th>
                 <th>Quantidade da OP</th>
-                <th>Comprimento da OP</th>
+                <th>Comprimento da OP (m)</th>
                 <th>Tipo de Tecido</th>
-                <th>Gramatura da OP</th>
+                <th>Gramatura da OP (g/m²)</th>
                 <th>Quantidade de Peças Retiradas</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody id="productionTable">
+        </tbody>
     </table>
 
-    <button onclick="downloadCSV()">Download CSV</button>
+    <button type="button" onclick="downloadCSV()">Baixar CSV</button>
 
     <script>
         let records = [];
-        let selectedMachine = '';
 
-        document.addEventListener('DOMContentLoaded', () => {
-            loadRecords();
-            updateTable();
-        });
-
-        function enableInputs(machine) {
-            selectedMachine = machine;
-            document.getElementById('opNumber').disabled = false;
-            document.getElementById('componentCode').disabled = false;
-            document.getElementById('opQuantity').disabled = false;
-            document.getElementById('opLength').disabled = false;
-            document.getElementById('fabricType').disabled = false;
-            document.getElementById('opWeight').disabled = false;
-            document.getElementById('piecesRemoved').disabled = false;
-            document.getElementById('calculate-btn').disabled = false;
-        }
-
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
-        }
-
-        function calculateAndSave() {
+        function addRecord() {
+            const date = new Date().toLocaleString();
+            const machine = document.getElementById('machine').value;
             const opNumber = document.getElementById('opNumber').value;
-            const componentCode = parseInt(document.getElementById('componentCode').value) || 0;
-            const opQuantity = parseInt(document.getElementById('opQuantity').value) || 0;
-            const opLength = parseInt(document.getElementById('opLength').value) || 0;
+            const componentCode = document.getElementById('componentCode').value;
+            const opQuantity = document.getElementById('opQuantity').value;
+            const opLength = document.getElementById('opLength').value;
             const fabricType = document.getElementById('fabricType').value;
-            const opWeight = parseInt(document.getElementById('opWeight').value) || 0;
-            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+            const opWeight = document.getElementById('opWeight').value;
+            const piecesRemoved = document.getElementById('piecesRemoved').value;
 
-            const totalPieces = opQuantity - piecesRemoved;
-            document.getElementById('result').textContent = `Quantidade de Peças Restantes: ${totalPieces}`;
+            const record = {
+                date,
+                machine,
+                opNumber,
+                componentCode,
+                opQuantity,
+                opLength,
+                fabricType,
+                opWeight,
+                piecesRemoved
+            };
 
-            const date = new Date().toLocaleString("pt-BR", { timeZone: "America/Sao_Paulo" }).replace(",", " ");
-            records.push({ date, machine: selectedMachine, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved });
-
-            saveRecords();
+            records.push(record);
             updateTable();
-
-            document.getElementById('opNumber').value = '';
-            document.getElementById('componentCode').value = '';
-            document.getElementById('opQuantity').value = '';
-            document.getElementById('opLength').value = '';
-            document.getElementById('fabricType').value = '';
-            document.getElementById('opWeight').value = '';
-            document.getElementById('piecesRemoved').value = '';
-
-            document.getElementById('opNumber').disabled = true;
-            document.getElementById('componentCode').disabled = true;
-            document.getElementById('opQuantity').disabled = true;
-            document.getElementById('opLength').disabled = true;
-            document.getElementById('fabricType').disabled = true;
-            document.getElementById('opWeight').disabled = true;
-            document.getElementById('piecesRemoved').disabled = true;
-            document.getElementById('calculate-btn').disabled = true;
         }
 
         function updateTable() {
-            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
-            tableBody.innerHTML = "";
-
-            records.sort((a, b) => new Date(b.date) - new Date(a.date));
-
+            const productionTable = document.getElementById('productionTable');
+            productionTable.innerHTML = '';
             records.forEach(record => {
-                const row = tableBody.insertRow();
-                row.insertCell(0).textContent = record.date;
-                row.insertCell(1).textContent = record.machine;
-                row.insertCell(2).textContent = record.opNumber;
-                row.insertCell(3).textContent = record.componentCode;
-                row.insertCell(4).textContent = record.opQuantity;
-                row.insertCell(5).textContent = record.opLength;
-                row.insertCell(6).textContent = record.fabricType;
-                row.insertCell(7).textContent = record.opWeight;
-                row.insertCell(8).textContent = record.piecesRemoved;
+                const row = document.createElement('tr');
+                for (const key in record) {
+                    const cell = document.createElement('td');
+                    cell.textContent = record[key];
+                    row.appendChild(cell);
+                }
+                productionTable.appendChild(row);
             });
-        }
-
-        function saveRecords() {
             localStorage.setItem('productionRecords', JSON.stringify(records));
-        }
-
-        function loadRecords() {
-            const savedRecords = localStorage.getItem('productionRecords');
-            if (savedRecords) {
-                records = JSON.parse(savedRecords);
-            }
         }
 
         function downloadCSV() {
@@ -238,6 +134,65 @@
             link.click();
             document.body.removeChild(link);
         }
+
+        function calculateResults() {
+            const fabricType = document.getElementById('fabricType').value;
+            const opWeight = parseFloat(document.getElementById('opWeight').value);
+            const opLength = parseFloat(document.getElementById('opLength').value);
+            const maxCarouselLength = 540;
+
+            // Cálculo do Número de Cortes
+            const numCuts = Math.floor(maxCarouselLength / opLength);
+            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+
+            // Cálculo do Número de Voltas
+            let numTurns = 0;
+            if (fabricType === 'Plano') {
+                numTurns = calculateTurnsPlano(opWeight);
+            } else if (fabricType === 'Tubular') {
+                numTurns = calculateTurnsTubular(opWeight);
+            } else if (fabricType === 'PET') {
+                numTurns = 25; // Valor fixo para PET
+            }
+
+            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+
+            // Cálculo da Quantidade Cortada
+            const cutAmount = numCuts * numTurns;
+            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+        }
+
+        function calculateTurnsPlano(weight) {
+            const baseWeight = 65;
+            const baseTurns = 80;
+            if (weight === baseWeight) {
+                return baseTurns;
+            } else {
+                const difference = (weight - baseWeight) * 8 / (92 - 80);
+                return baseTurns - difference;
+            }
+        }
+
+        function calculateTurnsTubular(weight) {
+            const baseWeight = 65;
+            const baseTurns = 45;
+            if (weight === baseWeight) {
+                return baseTurns;
+            } else {
+                const difference = (weight - baseWeight) * 8 / (92 - 80);
+                return baseTurns - difference;
+            }
+        }
+
+        function loadRecords() {
+            const savedRecords = localStorage.getItem('productionRecords');
+            if (savedRecords) {
+                records = JSON.parse(savedRecords);
+                updateTable();
+            }
+        }
+
+        window.onload = loadRecords;
     </script>
 </body>
 </html>
